Prevent the movies list from jumping when the tableHead is removed from the layout due to position:fixed by adding an own sticky header

--- a/udemy4/src/app/videos/videos.component.css
+++ b/udemy4/src/app/videos/videos.component.css
@@ -31,22 +31,23 @@
 /* Remove default margin under each table because we
     want the header appear to be part of the table below
  */
-#moviesTableHead {
+#moviesTableHead, #moviesTableHeadSticky {
     margin-bottom: 0;
 }
 
 /* Make the sticky table header overlap other content */
-.movieTableHeadWrapper {
-    position: inherit;  /* not necessary, as style will return to previous value anyway */
-}
-
 .movieTableHeadWrapper.sticky {
+    display:none;
     position: fixed;
     top: 0;
     left: 0;
     opacity: 1;
     background-color: white;
     z-index: 100; /* Above other content */
+}
+
+.movieTableHeadWrapper.sticky.visible {
+    display: block;
 }
 
 .innerContent {
